@@ -1,13 +1,20 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \- History For AdvanceCOMP
-.SH ADVANCECOMP VERSION 1.21 2016/09 
+.SH ADVANCECOMP VERSION 1.21 2016/11 
 .PD 0
 .IP \(bu
 Update to latest zopfli.
 .IP \(bu
 Added libdeflate support. It\'s the new default,
 enabled using \-2, \-\-shrink\-normal.
+.IP \(bu
+Windows binaries built with MingW 4.9.3 using the MXE cross compiler at
+commit 62bcdbee56e87c81f1faa105b8777a5879d4e2e with targets
+i686\-w64\-mingw32 and x86_64\-w64\-mingw32.
+.IP \(bu
+DOS binaries built with DJGPP 4.8.5 from
+https://github.com/andrewwutw/build\-djgpp
 .PD
 .SH ADVANCECOMP VERSION 1.20 2015/08 
 .PD 0
